tests/programs/valid/MethodBodyExample.java
public class MethodBodyExample {
    public void nonAbstractMethod() {
        System.out.println("This method has a body.");
    }
}
