tests/programs/invalid/multiple_fields_per_declaration.java
public class multiple_fields_per_declaration {
    public Foo() {}
    public Foo a, b;
}